# vehicle

./: .gitignore  CMakeLists.txt  README.md  app.info  create_gov.sh  hello.cpp  main.cpp  sonar-project.properties
.github/workflows/: build.yml
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  helloWorld
build_release/lib/sum/: Makefile  cmake_install.cmake  main_sum
gcov-coverage/: CXX.includecache  DependInfo.cmake  app.info  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  hello_test.cpp.gcda  hello_test.cpp.gcno  index-sort-f.html  index-sort-l.html  index.html  link.txt  main.cpp.gcda  main.cpp.gcno
gcov-coverage/Users/oguzemrecakil/Desktop/HelloWorld/: hello.cpp.func-sort-c.html  hello.cpp.func.html  hello.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gcov-coverage/Users/oguzemrecakil/Desktop/HelloWorld/unittest/: hello_test.cpp.func.html  main.cpp.func-sort-c.html  main.cpp.gcov.html
gcov-coverage/Users/oguzemrecakil/Desktop/cppTemplateProject/templateCpp/: hello.cpp.func-sort-c.html  hello.cpp.func.html  hello.cpp.gcda  hello.cpp.gcno  hello.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gcov-coverage/Users/oguzemrecakil/Desktop/cppTemplateProject/templateCpp/unittest/: hello_test.cpp.func-sort-c.html  hello_test.cpp.func.html  hello_test.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
gcov-coverage/gmock/: gmock-matchers.h.func-sort-c.html  gmock-matchers.h.func.html  gmock-matchers.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gcov-coverage/gmock/internal/: gmock-internal-utils.h.func-sort-c.html  gmock-internal-utils.h.func.html  gmock-internal-utils.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gcov-coverage/gtest/: gtest-matchers.h.func-sort-c.html  gtest-matchers.h.func.html  gtest-matchers.h.gcov.html  gtest-message.h.func-sort-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gcov-coverage/gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  gtest-type-util.h.func-sort-c.html  gtest-type-util.h.func.html  gtest-type-util.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
lib/sum/: CMakeLists.txt  main.cpp  sum.cpp  sum.h
src/: camera.cpp  camera.h  energymanagament.cpp  energymanagament.h  hello.cpp  hello.h  main.cpp  movement.cpp  movement.h  sensors.cpp  sensors.h  spi.h  vehicle.cpp  vehicle.h
unittest/: CMakeLists.txt  conanfile.txt  helloTest.cpp  hello_test.cpp  main.cpp  sensor_test.cpp
